Added markdown to all files. Combined conservation and sensitive code for Qld, NSW

--- a/source-code/py-notebook/NT-conservation.ipynb
+++ b/source-code/py-notebook/NT-conservation.ipynb
@@ -1,25 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "776f75ec",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# NT Conservation List"
-   ]
+    "# NT Conservation List\n",
+    "\n",
+    "## List Identifiers\n",
+    "* Conservation list: __[dr651](https://lists.ala.org.au/speciesListItem/list/dr651)__\n",
+    "\n",
+    "## Documentation\n",
+    "*  __[Home Page](https://nt.gov.au/environment)__\n",
+    "*  __[Fauna](https://nt.gov.au/environment/animals/threatened-animals)__\n",
+    "*  __[Flora](https://nt.gov.au/environment/native-plants/threatened-plants)__\n",
+    "\n",
+    "**Note:** Data was manually copied from website. No API or files available for download"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Import libraries"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "#import essential libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import dateutil.parser as parser\n",
@@ -33,36 +52,59 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "871b5ff6",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "data = pd.read_excel(\"/Users/cha801/Documents/UpdateLists/Excels/northernTerritoryConservationStatusList-Plants.xlsx\")"
-   ]
+    "## Process Flora"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "64f2960e",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data = pd.read_excel(\"/Users/cha801/Documents/UpdateLists/Excels/northernTerritoryConservationStatusList-Plants.xlsx\")"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Map DWC terms"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "#rename the DwC terms\n",
     "data = data.rename(columns=\n",
     "{'Plant family':'family',\n",
     " 'Status':'status',\n",
     " })"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -212,18 +254,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6a518373",
+   "cell_type": "markdown",
+   "source": [
+    "Create sourceStatus from status column\n",
+    "Remove unwanted characters from status and scientific name\n",
+    "Create vernacularName\n",
+    "Create scientificName\n",
+    "Drop 'Scientific name' column"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "data['sourceStatus'] = data['status'].copy()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -282,70 +340,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c9da2e29",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "#data.to_csv('/northernTerritoryConservationStatusList-Plants.csv',index = False,encoding='utf-8-sig')"
-   ]
+    "## Process Fauna"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c52c67e3",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "data1 = pd.read_csv(\"/northernTerritoryConservationStatusList-Animals.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "99484c30",
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data is  (84, 5)\n",
-      "data 1 is  (141, 5)\n"
-     ]
-    }
-   ],
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
    "source": [
+    "# Check datasets size\n",
     "print (\"data is \",data.shape)\n",
     "print (\"data 1 is \",data1.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "bb031394",
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Fauna dataset requires no modification\n",
+    "Concatenate Fauna and Flora datasets"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "result = pd.concat([data, data1])"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -566,30 +627,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "249fe09d",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "result.to_csv('/northernTerritoryConservationStatusList.csv',index = False,encoding='utf-8-sig')"
-   ]
+    "Write dataframe to CSV - UTF-8 encoding"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e2a39b6",
+   "outputs": [],
+   "source": [
+    "result.to_csv('/northernTerritoryConservationStatusList.csv',index = False,encoding='utf-8-sig')"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
