--- a/source-code/py-notebook/SA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/SA-conservation-sensitive.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "# SA Conservation and Sensitive Lists\n",
+    "Import fauna and vascular plants taxonomies from BDBSA and export lists for use in the ALA\n",
+    "\n",
+    "## List Identifiers\n",
+    "* Conservation list: __[dr653](https://lists.ala.org.au/speciesListItem/list/dr653)__\n",
+    "* Sensitive list: __[dr884](https://lists.ala.org.au/speciesListItem/list/dr884)__"
+   ],
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "# SA Conservation and Sensitive Lists\n",
-    "Import fauna and vascular plants taxonomies from BDBSA and export lists for use in the ALA"
-   ]
+   }
   },
   {
    "cell_type": "code",
@@ -346,8 +350,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Write dataframe to CSV"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "saList.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/conservation-lists/SA_Census_conservation.csv\",index=False)"
@@ -432,8 +448,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Write dataframe to CSV"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "sasensitive.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/sensitive-lists/SA-sensitive.csv\",encoding=\"UTF-8\",index=False)"
