iNaturalist Sensitive Species update notebook

--- a/source-code/py-notebook/inaturalist-sensitive.ipynb
+++ b/source-code/py-notebook/inaturalist-sensitive.ipynb
@@ -3722,7 +3722,7 @@
     "# New Records\n",
     "* Write New template if update required\n",
     "\n",
-    "** Quesion? How do we know the taxon_id and iNaturalist Place ID when these are new records???**"
+    "** Question? How do we know the taxon_id and iNaturalist Place ID when these are new records???**"
    ],
    "metadata": {
     "collapsed": false,
@@ -3770,7 +3770,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Records for Update\n",
+    "# Records for Update- needs\n",
     "* Set status to standard terms\n",
     "* Compare status for sensitive vs iNat\n",
     "* Write Update template if update required"
