--- a/source-code/py-notebook/inaturalist-sensitive.ipynb
+++ b/source-code/py-notebook/inaturalist-sensitive.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "https://docs.google.com/spreadsheets/d/1yTwWh4d-lHeaBGCB9m70-HKEMtvrquHsPu3Zrgz9BcE/edit#gid=1531097917\n",
     "\n",
-    "Current statuses per iNaturalist taxonID are available in the iNaturalist site export, accessible via an iNaturalist AU site admin and in this repository (inaturalist-australia-9-conservation_statuses.xls)\n",
+    "Current statuses perr iNaturalist taxonID are available in the iNaturalist site export, accessible via an iNaturalist AU site admin and in this repository (inaturalist-australia-9-conservation_statuses.xls)\n",
     "\n",
     "### Suggested approach:\n",
     "\n",
