--- a/source-code/py-notebook/inaturalist-sensitive.ipynb
+++ b/source-code/py-notebook/inaturalist-sensitive.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "https://docs.google.com/spreadsheets/d/1yTwWh4d-lHeaBGCB9m70-HKEMtvrquHsPu3Zrgz9BcE/edit#gid=1531097917\n",
     "\n",
-    "Current statuses perr iNaturalist taxonID are available in the iNaturalist site export, accessible via an iNaturalist AU site admin and in this repository (inaturalist-australia-9-conservation_statuses.xls)\n",
+    "Current statuses per iNaturalist taxonID are available in the iNaturalist site export, accessible via an iNaturalist AU site admin and in this repository (inaturalist-australia-9-conservation_statuses.xls)\n",
     "\n",
     "### Suggested approach:\n",
     "\n",
@@ -44,7 +44,6 @@
     "import pandas as pd\n",
     "import requests\n",
     "import json\n",
-    "import numpy as np\n",
     "projectdir = \"/Users/oco115/PycharmProjects/iNaturalist-lists/\"\n",
     "listdir = \"/Users/oco115/PycharmProjects/authoritative-lists/current-lists/\"\n",
     "inatcsv = projectdir + \"data/inaturalist-australia-9-conservation_statuses.csv\"\n",
@@ -3634,7 +3633,7 @@
    "outputs": [],
    "source": [
     "qldinat1 = qldinat.rename(columns={'taxonname': 'scientificName'})\n",
-    "qldiant1\n",
+    "qldinat1\n",
     "taxmatch = qldinat1.merge(qldsensitive, how = 'inner', on = ['scientificName'])\n",
     "taxmatch"
    ],
