Created Qld only notebook.

--- a/source-code/py-notebook/inaturalist-statuses/inaturalist-sensitive - Qld .ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/inaturalist-sensitive - Qld .ipynb
@@ -47,7 +47,7 @@
     "inatcsv = projectdir + \"inaturalist-australia-9-conservation_statuses.csv\"\n",
     "joincsv = projectdir + \"inaturalist-qld-outer-join.csv\"\n",
     "usercsv = projectdir + \"inaturalist-qld-user-708886.csv\"\n",
-    "apiurlbase = \"https://api.inaturalist.org/v1/taxa/\"\n"
+    "apiurlbase = \"https://api.inaturalist.org/v1/taxa/\""
    ],
    "metadata": {
     "collapsed": false,
@@ -76,7 +76,7 @@
    "source": [
     "### Extract unique authorities for each state\n",
     " * find unique authorities\n",
-    " * manually determine lists for each state"
+    " * need to manually determine lists for each state"
    ],
    "metadata": {
     "collapsed": false,
