--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Drop columns\n",
@@ -136,25 +136,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "    taxonID               scientificName        vernacularName  \\\n9      4864           Ambassis agassizii   Agassiz's Glassfish   \n28   528544            Bidyanus bidyanus          Silver Perch   \n37     5133            Chelodina expansa  Broad-shelled Turtle   \n48     4784  Craterocephalus fluviatilis      Murray Hardyhead   \n\n   scientificNameAuthority primaryDiscipline establishmentMeans taxonRank  \\\n9       Steindachner, 1867     Aquatic fauna                NaN   species   \n28        (Mitchell, 1838)     Aquatic fauna                NaN   species   \n37              Gray, 1857     Aquatic fauna                NaN   species   \n48         McCulloch, 1912     Aquatic fauna                NaN   species   \n\n   speciesGroup           ffgactstatus          epbcactStatus  \\\n9          Fish                Extinct                    NaN   \n28         Fish             Endangered  Critically Endangered   \n37     Reptiles             Endangered                    NaN   \n48         Fish  Critically Endangered             Endangered   \n\n        vicadvisorystatus restrictedFlag    modified extractDate  \\\n9      Regionally extinct            NaN  2013-04-04  2023-01-16   \n28             Vulnerable            NaN  2016-05-24  2023-01-16   \n37             Endangered            NaN  2014-11-20  2023-01-16   \n48  Critically endangered            NaN  2013-04-04  2023-01-16   \n\n                   status           sourceStatus  \n9                 Extinct                Extinct  \n28             Endangered             Endangered  \n37             Endangered             Endangered  \n48  Critically Endangered  Critically Endangered  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>taxonID</th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>scientificNameAuthority</th>\n      <th>primaryDiscipline</th>\n      <th>establishmentMeans</th>\n      <th>taxonRank</th>\n      <th>speciesGroup</th>\n      <th>ffgactstatus</th>\n      <th>epbcactStatus</th>\n      <th>vicadvisorystatus</th>\n      <th>restrictedFlag</th>\n      <th>modified</th>\n      <th>extractDate</th>\n      <th>status</th>\n      <th>sourceStatus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>4864</td>\n      <td>Ambassis agassizii</td>\n      <td>Agassiz's Glassfish</td>\n      <td>Steindachner, 1867</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Fish</td>\n      <td>Extinct</td>\n      <td>NaN</td>\n      <td>Regionally extinct</td>\n      <td>NaN</td>\n      <td>2013-04-04</td>\n      <td>2023-01-16</td>\n      <td>Extinct</td>\n      <td>Extinct</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>528544</td>\n      <td>Bidyanus bidyanus</td>\n      <td>Silver Perch</td>\n      <td>(Mitchell, 1838)</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Fish</td>\n      <td>Endangered</td>\n      <td>Critically Endangered</td>\n      <td>Vulnerable</td>\n      <td>NaN</td>\n      <td>2016-05-24</td>\n      <td>2023-01-16</td>\n      <td>Endangered</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>5133</td>\n      <td>Chelodina expansa</td>\n      <td>Broad-shelled Turtle</td>\n      <td>Gray, 1857</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Reptiles</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>Endangered</td>\n      <td>NaN</td>\n      <td>2014-11-20</td>\n      <td>2023-01-16</td>\n      <td>Endangered</td>\n      <td>Endangered</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>4784</td>\n      <td>Craterocephalus fluviatilis</td>\n      <td>Murray Hardyhead</td>\n      <td>McCulloch, 1912</td>\n      <td>Aquatic fauna</td>\n      <td>NaN</td>\n      <td>species</td>\n      <td>Fish</td>\n      <td>Critically Endangered</td>\n      <td>Endangered</td>\n      <td>Critically endangered</td>\n      <td>NaN</td>\n      <td>2013-04-04</td>\n      <td>2023-01-16</td>\n      <td>Critically Endangered</td>\n      <td>Critically Endangered</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conservationList = conservationList[conservationList[\"status\"].notna()]\n",
     "# reformat date\n",
     "conservationList['extractDate'] = pd.to_datetime(conservationList['extractDate'], format='%d/%m/%Y')\n",
     "conservationList['extractDate'] = conservationList['extractDate'].dt.strftime('%Y-%m-%d')\n",
     "conservationList['modified'] = pd.to_datetime(conservationList['modified'], format='%d/%m/%Y')\n",
     "conservationList['modified'] = conservationList['modified'].dt.strftime('%Y-%m-%d')\n",
+    "sensitiveList = conservationList\n",
+    "conservationList = conservationList[conservationList[\"status\"].notna()]\n",
+    "\n",
     "conservationList.head(4)"
    ],
    "metadata": {
@@ -180,19 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "124"
+      "text/plain": "136"
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitiveList = conservationList[conservationList[\"restrictedFlag\"].notna()]\n",
+    "sensitiveList = sensitiveList[sensitiveList[\"restrictedFlag\"].notna()]\n",
     "len(sensitiveList.index)"
    ],
    "metadata": {
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
