inaturalist qld list

--- a/source-code/py-notebook/inaturalist-statuses/collate-status-taxa.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/collate-status-taxa.ipynb
@@ -690,6 +690,42 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Notes about conservation status inheritance in inaturalist:\n",
+    "Adding a conservation status for a higher level taxon affects observations of all the species in this taxon. Please do not add statuses for taxa that contain species that have no status because that will incorrectly obscure coordinates for observations of those species.\n",
+    "\n",
+    "### Example:\n",
+    "Genus Acriopsis - https://www.inaturalist.org/taxa/425476-Acriopsis\n",
+    "\n",
+    "The inherited species records are not in the export and can't be edited, but they do appear on the species pages.\n",
+    "The changes are to set _Acriopsis emarginata_ to Vulnerable. The rest will remain least concern."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "eg = pd.DataFrame(columns=('TaxonID', 'Name', 'Status','Rank','iNat species page','iNat edit taxon','Export'))\n",
+    "eg.loc[1]=['425476','Acriopsis','LC/obscured','genus','No ','Yes','Yes']\n",
+    "eg.loc[2]=['1141144','Acriopsis emarginata','LC/obscured','species','Yes','No','No']\n",
+    "eg.loc[3]=['425475','Acriopsis liliifolia','LC/obscured','species','Yes','No','No']\n",
+    "eg.loc[4]=['427833','Acriopsis ridleyi','LC/obscured','species','Yes','No','No']\n",
+    "eg.loc[5]=['1037999','Acriopsis indica','LC/obscured','Species','Yes','No','No']\n",
+    "eg"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
