inaturalist qld include conservation list

--- a/source-code/py-notebook/inaturalist-statuses/collate-status-taxa.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/collate-status-taxa.ipynb
@@ -23,8 +23,8 @@
     "\n",
     "**Next steps:**\n",
     "State by state establish the changes that need to be made:\n",
-    "    a. new - any new species that appear in the state lists but do not have a status in inaturalist (new template)\n",
-    "    b. updates - any changes to information which was added by us previously (user_id = 708886) (update template, action='UPDATE')\n",
+    "    a. new - any new species that appear in the state lists but do not have a status in inaturalist (ADD)\n",
+    "    b. updates - any changes to statuses (update template, action='UPDATE')\n",
     "    c. removals - any statuses which were added by us previously (user_id = 708886) list which are incorrect (update template, action='REMOVE')\n",
     "    d. flags - are there any statuses by other users that need to be flagged?"
    ]
@@ -78,30 +78,6 @@
    "source": [
     "df = pd.read_csv(sourcedir + \"inaturalist-australia-9-conservation_statuses.csv\", encoding='UTF-8', na_filter=False, dtype=str)\n",
     "df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Empty DataFrame\nColumns: [id, taxon_id, user_id, place_id, source_id, authority, status, url, description, geoprivacy, iucn, created_at, updated_at, place_name, place_display_name]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>taxon_id</th>\n      <th>user_id</th>\n      <th>place_id</th>\n      <th>source_id</th>\n      <th>authority</th>\n      <th>status</th>\n      <th>url</th>\n      <th>description</th>\n      <th>geoprivacy</th>\n      <th>iucn</th>\n      <th>created_at</th>\n      <th>updated_at</th>\n      <th>place_name</th>\n      <th>place_display_name</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['taxon_id'] == '425475']"
    ],
    "metadata": {
     "collapsed": false,
@@ -287,55 +263,6 @@
     "z.close()\n",
     "\n",
     "inattaxa.head(10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "            id                                  taxonID  \\\n655439  816357  https://www.inaturalist.org/taxa/816357   \n\n                                     identifier  \\\n655439  https://www.inaturalist.org/taxa/816357   \n\n                             parentNameUsageID  kingdom        phylum  \\\n655439  https://www.inaturalist.org/taxa/71977  Plantae  Tracheophyta   \n\n             class        order           family       genus specificEpithet  \\\n655439  Liliopsida  Alismatales  Aponogetonaceae  Aponogeton       elongatus   \n\n       infraspecificEpithet              modified        scientificName  \\\n655439                  NaN  2019-02-15T07:56:47Z  Aponogeton elongatus   \n\n       taxonRank                                         references  \n655439   species  http://www.catalogueoflife.org/annual-checklis...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>taxonID</th>\n      <th>identifier</th>\n      <th>parentNameUsageID</th>\n      <th>kingdom</th>\n      <th>phylum</th>\n      <th>class</th>\n      <th>order</th>\n      <th>family</th>\n      <th>genus</th>\n      <th>specificEpithet</th>\n      <th>infraspecificEpithet</th>\n      <th>modified</th>\n      <th>scientificName</th>\n      <th>taxonRank</th>\n      <th>references</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>655439</th>\n      <td>816357</td>\n      <td>https://www.inaturalist.org/taxa/816357</td>\n      <td>https://www.inaturalist.org/taxa/816357</td>\n      <td>https://www.inaturalist.org/taxa/71977</td>\n      <td>Plantae</td>\n      <td>Tracheophyta</td>\n      <td>Liliopsida</td>\n      <td>Alismatales</td>\n      <td>Aponogetonaceae</td>\n      <td>Aponogeton</td>\n      <td>elongatus</td>\n      <td>NaN</td>\n      <td>2019-02-15T07:56:47Z</td>\n      <td>Aponogeton elongatus</td>\n      <td>species</td>\n      <td>http://www.catalogueoflife.org/annual-checklis...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#inattaxa[inattaxa['id'] == 1141144]\n",
-    "inattaxa[inattaxa['scientificName'] =='Aponogeton elongatus']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "            id                                  taxonID  \\\n349221  467454  https://www.inaturalist.org/taxa/467454   \n\n                                     identifier  \\\n349221  https://www.inaturalist.org/taxa/467454   \n\n                              parentNameUsageID  kingdom        phylum  \\\n349221  https://www.inaturalist.org/taxa/140838  Plantae  Tracheophyta   \n\n             class        order       family      genus specificEpithet  \\\n349221  Liliopsida  Asparagales  Orchidaceae  Caladenia     filamentosa   \n\n       infraspecificEpithet              modified         scientificName  \\\n349221                  NaN  2019-02-12T08:52:52Z  Caladenia filamentosa   \n\n       taxonRank                                         references  \n349221   species  http://www.ubio.org/browser/details.php?nameba...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>taxonID</th>\n      <th>identifier</th>\n      <th>parentNameUsageID</th>\n      <th>kingdom</th>\n      <th>phylum</th>\n      <th>class</th>\n      <th>order</th>\n      <th>family</th>\n      <th>genus</th>\n      <th>specificEpithet</th>\n      <th>infraspecificEpithet</th>\n      <th>modified</th>\n      <th>scientificName</th>\n      <th>taxonRank</th>\n      <th>references</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>349221</th>\n      <td>467454</td>\n      <td>https://www.inaturalist.org/taxa/467454</td>\n      <td>https://www.inaturalist.org/taxa/467454</td>\n      <td>https://www.inaturalist.org/taxa/140838</td>\n      <td>Plantae</td>\n      <td>Tracheophyta</td>\n      <td>Liliopsida</td>\n      <td>Asparagales</td>\n      <td>Orchidaceae</td>\n      <td>Caladenia</td>\n      <td>filamentosa</td>\n      <td>NaN</td>\n      <td>2019-02-12T08:52:52Z</td>\n      <td>Caladenia filamentosa</td>\n      <td>species</td>\n      <td>http://www.ubio.org/browser/details.php?nameba...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inattaxa[inattaxa.scientificName.str.startswith('Caladenia filamentosa')]"
    ],
    "metadata": {
     "collapsed": false,
