Added NT - no sensitive list?

--- a/source-code/py-notebook/inaturalist-statuses/act.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/act.ipynb
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "sensitivelist = pd.read_csv(listdir + \"sensitive-lists/ACT-sensitive.csv\")  # Qld sensitive list\n",
+    "sensitivelist = pd.read_csv(listdir + \"sensitive-lists/ACT-sensitive.csv\")  # ACT sensitive list\n",
     "sensitivelist['scientificName'] = sensitivelist['scientificname'].str.replace('subsp. ', '', regex=False)\n",
     "sensitivelist['bionet_geoprivacy'] = 'obscured'\n",
     "# sensitivelist = sensitivelist.rename(columns={'taxonID':'wildnetTaxonID'})\n",
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "conservationlist = pd.read_csv(listdir + \"conservation-lists/ACT-conservation.csv\")  # Qld sensitive list\n",
+    "conservationlist = pd.read_csv(listdir + \"conservation-lists/ACT-conservation.csv\")  # ACT conservation list\n",
     "conservationlist['scientificName'] = conservationlist['scientificName'].str.replace('subsp. ', '', regex=False)\n",
     "# conservationlist = conservationlist.rename(columns={'taxonID':'bionetTaxonID'})\n",
     "# conservationlist['bionet_geoprivacy'] = conservationlist['sensitivityClass'].apply(gpcondition)\n",
