VIC list update and incomplete inat statuses

--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -3,31 +3,35 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# VIC Conservation Status and Sensitive Species Lists\n",
+    "# State Conservation Status and Sensitive Species Lists - VIC\n",
     "\n",
-    "This notebook downloads the VIC lists from the [Qld Government Open Data Portal](https://vba.dse.vic.gov.au/vba/downloadVSC.do) and formats them in Darwin Core for ingestion into the ALA Lists tool.\n",
-    "It will save original lists to the `source-data/ViC` directory, process the lists and save them to `current-lists`.\n",
-    "\n",
+    "This notebook downloads the VIC lists from the [Victorian Government Open Data Portal](https://vba.dse.vic.gov.au/vba/downloadVSC.do) and formats them in Darwin Core for ingestion into the ALA Lists tool.\n",
+    "It will save original lists to the `source-data/VIC` directory, process the lists and save them to `current-lists`.\n",
+    "The lists can be loaded into the lists-test environment then reviewed by following the instructions below.\n",
     "\n",
     "## Lists in the ALA Species List tool\n",
     "* Conservation list: __[dr655](https://lists.ala.org.au/speciesListItem/list/dr655)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr655))\n",
-    "* Sensitive list: __[dr490](https://lists.ala.org.au/speciesListItem/list/dr490)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr490))\n",
-    "\n",
+    "* Sensitive list: __[dr490](https://lists.ala.org.au/speciesListItem/list/dr490)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr18669))\n",
     "\n",
     "## Sources\n",
     "Victorian Biodivesity Atlas - Victoria Department of Environment, Land, Water and Planning\n",
+    "See https://vba.biodiversity.vic.gov.au/vba\n",
     "\n",
-    "### Conservation\n",
-    "* __[Metadata - xxx (Open Data Portal)](https://)__\n",
+    "* __[Metadata (Open Data Portal)](https://discover.data.vic.gov.au/dataset/victorian-biodiversity-atlas-vba-taxa-list1)__\n",
+    "* __[VBA Metadata](https://vba.dse.vic.gov.au/vba/index.jsp)__ (requires sign in)\n",
     "* __[Data](https://vba.dse.vic.gov.au/vba/downloadVSC.do)__\n",
     "\n",
-    "### Sensitive\n",
-    "* __[Metadata - xxx (Open Data Portal)](https://)__\n",
-    "* __[Data](https://vba.dse.vic.gov.au/vba/downloadVSC.do)__\n",
+    "**Metadata Description**\n",
+    "This list is generated from the subset of species listed in the Victorian Biodiversity Atlas (VBA) Taxa List downloaded from https://vba.dse.vic.gov.au/vba/downloadVSC.do which have a conservation status attributed to them.\n",
     "\n",
-    "### Codes\n",
-    "* __[Metadata - xxxxx](https://)__\n",
-    "* __[Data](https://)__\n"
+    "After the review of the Flora and Fauna Guarantee Act (FFG Act) all previously listed species under the three different legislations and policy have been re-assessed. The VBA has been updated to reflect the gazetted and published FFG Threatened List. The Conservation Status is now only EPBC and FFG. Vic Advisory Lists are now redundant but retained for your information as 'Old Advisory List'. This is the interim measure before the national Single Operational List is finalised, which will replace the 3 different lists previously held in Victoria. The FFG categories are the nationally agreed IUCN Red list terms plus the EPBC Conservation Dependent category.\n",
+    "\n",
+    "The main attributes in this table are the current VBA taxon_id, scientific name, common name, authority, family (where relevant), conservation status, origin and taxon type. Where possible, taxon id's have been included that provide a match to the obsolete Atlas of Victorian Wildlife taxaid, and the Flora Infromation System.\n",
+    "\n",
+    "**URL**\n",
+    "https://discover.data.vic.gov.au/dataset/victorian-biodiversity-atlas-vba-taxa-list1\n",
+    "\n",
+    "Prerequisite: Data file has been downloaded into `source-data/VIC/Species-Checklist.csv`\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -38,36 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\oco115\\PycharmProjects\\authoritative-lists\\source-code\n"
-     ]
-    }
-   ],
-   "source": [
-    "# import function definitions from includes directory\n",
-    "%cd ..\n",
-    "from includes import list_functions"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
+    "import list_functions as lf\n",
     "\n",
-    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "#projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "cdataDir = \"current-lists/conservation-lists/\"\n",
     "sdataDir = \"current-lists/sensitive-lists/\"\n",
     "conservationlisturl = \"https://vba.dse.vic.gov.au/vba/downloadVSC.do\" # gets a csv\n",
@@ -284,11 +269,11 @@
     "filename = \"VIC-conservation.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr655\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr655\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = list_functions.get_changelist(testListUrl, prodListUrl)\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "prodList = list_functions.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = list_functions.kvp_to_columns(prodList)\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist"
    ],
@@ -330,11 +315,11 @@
     "filename = \"VIC-sensitive.csv\"\n",
     "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr490\" + \"?max=10000&includeKVP=true\"\n",
     "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18669\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = list_functions.get_changelist(testListUrl, prodListUrl )\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl )\n",
     "# save the lists locally\n",
     "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "prodList = list_functions.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
-    "prodList = list_functions.kvp_to_columns(prodList)\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
     "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
     "changelist\n",
     "## check this as no list in test at the moment"
