Update new URLs for bie

--- a/source-code/py-notebook/inaturalist-statuses/vic.ipynb
+++ b/source-code/py-notebook/inaturalist-statuses/vic.ipynb
@@ -325,7 +325,7 @@
    "source": [
     "# remove records that do not comply\n",
     "statelist = statelist[~statelist['type'].isin(['INFORMAL','CULTIVAR','HYBRID', 'BLACKLISTED']) ]\n",
-    "statelist = pd.DataFrame(statelist[['vba_taxonID','vba_scientificName','vba_status','vba_geoprivacy','lsid']])\n",
+    "statelist = pd.DataFrame(statelist[['vba_taxonID','vba_scientificName','vba_status','vba_geoprivacy','lsid']]).drop_duplicates()\n",
     "statelist"
    ],
    "metadata": {
@@ -427,9 +427,15 @@
    "source": [
     "# these will be used to populate the iucn_equivalent field\n",
     "iucnStatusMappings = {\n",
-    "    'Conservation Dependent': 'Vulnerable',\n",
-    "    'Endangered (Extinct in Victoria)': 'Extinct',\n",
-    "    'Threatened':'Vulnerable'\n",
+    "    'conservation dependent': 'Vulnerable',\n",
+    "    'endangered (extinct in victoria)': 'Extinct',\n",
+    "    'threatened':'Vulnerable',\n",
+    "    'least concern':'Least Concern',\n",
+    "    'special least concern':'Least Concern',\n",
+    "    'critically endangered': 'Critically Endangered',\n",
+    "    'endangered': 'Endangered',\n",
+    "    'extinct': 'Extinct',\n",
+    "    'vulnerable': 'Vulnerable'\n",
     "}"
    ],
    "metadata": {
@@ -540,7 +546,8 @@
     "# updates\n",
     "# action,taxon_name,id,taxon_id,status,iucn_equivalent,authority,url,geoprivacy,place_id,username\n",
     "# url is either a florabase url or bie page\n",
-    "mergedstatuses['new_url'] = mergedstatuses['lsid']\n",
+    "biesearchurl = \"https://bie.ala.org.au/species/\" # eg + \"https://id.biodiversity.org.au/node/apni/2894366\"\n",
+    "mergedstatuses['new_url'] =  biesearchurl + mergedstatuses['lsid']\n",
     "# biesearchurl = \"https://bie.ala.org.au/species/\" # eg + \"https://id.biodiversity.org.au/node/apni/2894366\"\n",
     "mergedstatuses['new_description'] = \"Listed as Threatened - refer to https://www.deeca.vic.gov.au/\"\n",
     "mergedstatuses['new_authority'] = \"Victorian Department of Energy, Environment and Climate Action \"\n",
